--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -43,6 +43,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "ashishkumar-ttt-server-66"
+          project: "g-suman-ttt-server-61"
           entrypoint: "src/server.js"
           root: "."
